@@ -1,3 +1,8 @@
+2012-12-27  Simson Garfinkel  <simsong@Mucha.local>
+
+	* src/tcpdemux.cpp (tcpdemux::close_all): renamed close_all_fd(). close_tcpip renamed close_tcpip_fd; close_oldest renamed close_oldest_fd()
+	(tcpdemux::remove_all_flows): renamed.
+
 2012-12-24  Simson Garfinkel  <simsong@Mucha.local>
 
 	* src/tcpip.h (class flow): removed connection_count from flow identifier becuase it cannot be derrived from the flow. We really should have the LSN as part of the flow or something. The connection_count will be found when the filename is made.
